flux/system/app-configs/kube-prometheus-stack.sops.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: monitoring-system
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age168avplsha0pc878zkkgnx2n7zku0grgmwal2grmxjxnx579j9ffq0a0yfp
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2WlFKQm9Od3diSGhsUVdX
[...]
            GECySg7LkeWTCfnR1qyru8vUkHaSBdC43lc9VWGuyTK0hZPfe38G4g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-12-22T12:38:30Z"
    mac: ENC[AES256_GCM,data:NNoONTBfKdmv88crR/GdsbrbZcZZUBzWTPIzPP4s02fu/LWmCDeepdz8CypYkYk2r+xymnNBoW5pd7MCfg0xEwTymWatndW8A0Mn696c+1U4oP7Le/HiRMqg2koaZJqxatpwOonB0/5cvAkKLJz7pkqIowrrm6YVTRPe0wecTN0=,iv:hPumyGB3xJ85pmxS4x8fSm85H3Y5ZKVEEDIr05JWrGM=,tag:SKu7E4uAJKhfO8LFZAg/VQ==,type:str]
    pgp: []
    encrypted_regex: ^.*(ingress|adminPassword)$
    version: 3.9.2
