flux/system/app-configs/longhorn.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: longhorn-ingress
    namespace: longhorn-system
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    ingressClassName: nginx
    tls:
        - hosts:
            - ENC[AES256_GCM,data:If1ALUYWYwlM/ah3DtTwYz9Mt3A9,iv:m+x/afS1sI8DdHUDfriiewI5EUSioiLPcfqL6WYlMPY=,tag:nzI/uOZuM2wcAtpSdSv0JQ==,type:str]
          secretName: longhorn-tls
    rules:
        - host: ENC[AES256_GCM,data:gnaaInxHIds1Ncu29siYKVSgyML6,iv:fwX2gdSeonN1xwlkq7Vp99d3RYsCi0hQyW2nwOtmjcQ=,tag:WHm2Yx6VW6VLE5emPCurCQ==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: longhorn-frontend
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age168avplsha0pc878zkkgnx2n7zku0grgmwal2grmxjxnx579j9ffq0a0yfp
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBM0JQLzVRZ05zRnlGTG5n
[...]
            nrCRl85MYDjzQKK2+d+2EzKjw1a8G6zVwSAR9IKb6FiqouVObzRqcg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-12-14T18:32:30Z"
    mac: ENC[AES256_GCM,data:wtS7pNqO2rNwMeMs4MgxMZR/6QJnb3UCvWVPH8g/YK5Crgk0q8Y+xPN7WzECJcJITFU7hK8FFWVYteEi7ZwoZXoGckVPn0/7NvUPQSn5/gsLR8HJKK/+OhGkkmKi60pJyjS9CSTlt/MM09oTt3upqO4PjybCTZ/2O+CrbiTqAw8=,iv:S4rfPs+8eF+FRwB1rpBYw/nQm64Cpvh++WOyl5yyScs=,tag:nz7Tlw9MJ8T/S016ebQb8g==,type:str]
    pgp: []
    encrypted_regex: ^.*(host|hosts)$
    version: 3.9.2
