flux/system/app-configs/cert-manager.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-tls-certificate-size
spec:
  failurePolicy: Fail
  rules:
    - name: set-privateKey-details
      match:
        any:
          - resources:
              kinds:
                - cert-manager.io/v1/Certificate
      mutate:
        patchStrategicMerge:
          spec:
            privateKey:
              +(algorithm): RSA
              +(size): 4096
              +(rotationPolicy): Always
